// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input is not Boolean value 1`] = `
<div>
  <input />
  <div>
    Hi is not a boolean value. Please check your value and try again.
  </div>
</div>
`;

exports[`It sould be valid if input is Boolean value 1`] = `
<div>
  <input />
  <div />
</div>
`;

exports[`It sould be valid if input is empty 1`] = `
<div>
  <input />
  <div />
</div>
`;
